--- a/typst.toml
+++ b/typst.toml
@@ -10,4 +10,4 @@ repository = "https://github.com/oicana/invoice-harness"
 keywords = ["zugferd", "invoice"]
 categories = ["scripting", "utility"]
 compiler = "0.12.0"
-exclude = ["/tests/*"]
+exclude = ["*/tests/**"]
